--- a/css/style.css
+++ b/css/style.css
@@ -7,14 +7,16 @@
 #about-header {
   text-align: center;
   font-size: 50px;
-  margin-top: 60px;
+  margin: 60px 0px 0px;
 }
 #profile-pic {
-  height: 200px;
+  height: 240px;
+  border-radius: 50%;
+  border: solid 5px;
 }
 #about-top {
   display: grid;
-  justify-content: center;
+  justify-items: center;
   margin: 0px;
   grid-row: 1 / 2;
   background: url("/Images/File_010.jpeg");
