--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,50 @@
+#home-body {
+  margin: 0px;
+  display: grid;
+  grid-template-columns: 20% auto;
+  grid-template-rows: 15% auto;
+  background-color: #e9ecef;
+}
+.previews {
+  display: inherit;
+  width: 250px;
+  justify-content: center;
+}
+#home-header {
+  grid-column: 1 / 3;
+  text-align: center;
+  background-color: #766153;
+  margin: 0px;
+  padding: 15px;
+  border-bottom: double 10px;
+}
+.icon {
+  height: 130px;
+  margin: 20px 15px;
+  padding: 15px;
+  background-color: #495057;
+  box-shadow: 15px 15px 15px #132a13;
+  border-radius: 20px;
+  border-bottom: solid #343a40;
+  border-right: solid #343a40;
+  border-top: solid #adb5bd ;
+  border-left: solid #adb5bd ;
+}
+#preview-sidebar {
+  display: grid;
+  justify-items: center;
+  grid-column: 1 / 2;
+  grid-row: 2 / 3 ;
+  background-color: #717744;
+  border-bottom-right-radius: 60px;
+  border-bottom: double 10px;
+  border-right: double 10px;
+}
+
 #about-body {
   margin: 0px;
   display: grid;
-  grid-template-rows: 50% 50% ;
+  grid-template-rows: 50% 50%;
   background-color: #717744;
 }
 #about-header {
@@ -32,7 +75,7 @@
 .about-bio {
   text-align: center;
   margin: 20px;
-  padding: 75px;
+  padding: 55px;
   font-size: 26px;
   background-color: #e9ecef;
   border: double 10px #84d2f6;
