--- a/css/style.css
+++ b/css/style.css
@@ -2,17 +2,16 @@
   margin: 0px;
   display: grid;
   grid-template-columns: 20% auto;
-  grid-template-rows: 15% auto;
-  background-color: #6c757d;
+  grid-template-rows: 20% auto;
+  background-color: #ffffff;
 }
 #home-img {
   grid-column: 2 / 3;
   grid-row: 2 / 3;
-  height: 815px;
+  height: 780px;
   width: 1400px;
-  margin: 35px;
-  border-radius: 50px;
-  border: double 10px;
+  border-bottom: solid 3px #606c38;
+  border-right: solid 3px #606c38;
 }
 .previews {
   display: inherit;
@@ -22,41 +21,35 @@
 #home-header {
   grid-column: 1 / 3;
   text-align: center;
-  background-color: #766153;
+  background-color: #f8f9fa;
   margin: 0px;
   padding: 15px;
-  border-bottom: double 10px;
-  box-shadow: 10px 10px 10px #212529;
+  border-bottom: solid 3px #606c38;
 }
 .icon {
   height: 130px;
-  margin: 20px 15px;
-  padding: 15px;
-  background-color: #495057;
-  box-shadow: 15px 15px 15px #132a13;
-  border-radius: 20px;
-  border-bottom: solid #343a40;
-  border-right: solid #343a40;
-  border-top: solid #adb5bd ;
-  border-left: solid #adb5bd ;
+  margin: 20px 5px;
+  padding: 15px 50px;
+  background-color: #ffffff;
+  box-shadow: 15px 15px 15px #6c757d;
+  border:solid  #606c38;
 }
 #preview-sidebar {
   display: grid;
   justify-items: center;
   grid-column: 1 / 2;
   grid-row: 2 / 3 ;
-  background-color: #717744;
+  background-color: #ffffff;
   border-bottom-right-radius: 60px;
-  border-bottom: double 10px;
-  border-right: double 10px;
-  box-shadow: 10px 10px 10px #212529;
+  border-right: solid 3px #606c38;
+  border-bottom: solid 3px #606c38;
 }
 
 #about-body {
   margin: 0px;
   display: grid;
   grid-template-rows: 50% 50%;
-  background-color: #717744;
+  background-color: #ffffff;
 }
 #about-header {
   text-align: center;
@@ -80,15 +73,15 @@
 #about-bottom {
   margin: 20px;
   height: 550px;
-  background-color: #766153;
-  border-radius: 20px;
+  background-color: #ffffff;
+  border: solid #606c38
 }
 .about-bio {
   text-align: center;
   margin: 20px;
   padding: 70px;
   font-size: 26px;
-  background-color: #e9ecef;
-  border: double 10px #84d2f6;
+  background-color: #ffffff;
+  border: double 10px #606c38;
   border-radius: 20px;
 }
