--- a/css/style.css
+++ b/css/style.css
@@ -87,19 +87,40 @@
 }
 
 #work-body {
+  width: 100vw;
   margin: 0;
-  display: grid;
-  grid-template-rows: 75% auto;
-  grid-template-columns: 1fr 1fr;
+  display: flex;
+  background: url(/Images/Work-Screen.jpeg);
+  background-size: cover;
+  flex-direction:column;
 }
 #work-top {
-  background: url(/Images/File_002.jpeg);
-  height: 700px;
-  width: 1900px;
   background-size: cover;
 }
 #work-header {
   text-align: center;
   margin-top: 150px;
-  font-size: 50px;
+  font-size: 100px;
+}
+#work-bottom {
+  display: grid;
+  justify-content: center;
+  position: absolute ; bottom: 0;
+  width: 100%;
+  height: 20vw;
+  text-align: center;
+  background-color: rgba(100, 100, 100, 0.7);
+  border-top:solid black;
+}
+.works {
+  margin: 20px 10px;
+  background-color: #ffffff;
+  width: fit-content;
+  border: solid black;
+}
+#tictactoe-prev {
+  background-color: black;
+  padding: 10px;
+  height: 200px;
+  margin: 10px 20px;
 }
