--- a/css/style.css
+++ b/css/style.css
@@ -1,45 +1,41 @@
 #home-body {
+  width:100vw;
+  height: 100vh;
   margin: 0px;
-  display: grid;
+  display: flex;
   grid-template-columns: 20% auto;
   grid-template-rows: 20% auto;
-  background-color: #ffffff;
-}
-#home-img {
-  grid-column: 2 / 3;
-  grid-row: 2 / 3;
-  height: 780px;
-  width: 1400px;
-  border-bottom: solid 3px #606c38;
-  border-right: solid 3px #606c38;
+  background: url(/Images/HomePage.jpeg);
+  background-size: cover;
+  flex-direction: column ;
 }
 .previews {
   display: inherit;
   width: 250px;
   justify-content: center;
 }
-#home-header {
-  grid-column: 1 / 3;
+.home-header {
+  width: 100vw;
   text-align: center;
   background-color: #f8f9fa;
   margin: 0px;
+  font-family: 'Lato', sans-serif;
   padding: 15px;
   border-bottom: solid 3px #606c38;
 }
 .icon {
   height: 130px;
-  margin: 20px 5px;
+  width: 130px;
+  margin: 20px 30px;
   padding: 15px 50px;
   background-color: #ffffff;
-  box-shadow: 15px 15px 15px #6c757d;
+  box-shadow: 15px 15px 15px black;
   border:solid  #606c38;
 }
 #preview-sidebar {
-  display: grid;
+  width: 18vw;
   justify-items: center;
-  grid-column: 1 / 2;
-  grid-row: 2 / 3 ;
-  background-color: #ffffff;
+  background-color: rgba(210, 210, 210, 0.6);
   border-bottom-right-radius: 60px;
   border-right: solid 3px #606c38;
   border-bottom: solid 3px #606c38;
@@ -47,14 +43,17 @@
 
 #about-body {
   margin: 0px;
-  display: grid;
-  grid-template-rows: 50% 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   background-color: #ffffff;
 }
 #about-header {
+  font-family: 'Nuosu SIL', serif;
+  width: 100vw;
   text-align: center;
   font-size: 50px;
-  margin: 60px 0px 0px;
+  margin: 40px 0px 0px;
 }
 #profile-pic {
   height: 240px;
@@ -72,14 +71,14 @@
 }
 #about-bottom {
   margin: 20px;
-  height: 550px;
+  height: 450px;
   background-color: #ffffff;
   border: solid #606c38
 }
 .about-bio {
   text-align: center;
   margin: 20px;
-  padding: 70px;
+  padding: 47px;
   font-size: 26px;
   background-color: #ffffff;
   border: double 10px #606c38;
@@ -97,30 +96,47 @@
 #work-top {
   background-size: cover;
 }
-#work-header {
+#work-header, #contact-header {
   text-align: center;
+  font-family: 'Nuosu SIL', serif;
   margin-top: 150px;
   font-size: 100px;
 }
-#work-bottom {
-  display: grid;
+#work-bottom, #contact-bottom {
+  display: flex;
   justify-content: center;
   position: absolute ; bottom: 0;
   width: 100%;
-  height: 20vw;
+  height: 45vh;
   text-align: center;
-  background-color: rgba(100, 100, 100, 0.7);
+  background-color: rgba(210, 210, 210, 0.6);
   border-top:solid black;
 }
 .works {
-  margin: 20px 10px;
+  margin: 20px 10px 80px;
   background-color: #ffffff;
   width: fit-content;
   border: solid black;
+  box-shadow: 10px 10px 10px black;
 }
-#tictactoe-prev {
+.work-prev {
   background-color: black;
   padding: 10px;
   height: 200px;
   margin: 10px 20px;
+}
+#contact-body {
+  margin: 0px;
+  display: flex;
+  flex-direction: column;
+  background: url(/Images/ContactPageFinal.jpeg);
+  width: 100vw;
+  background-size: cover;
+  height: 100vh;
+}
+.contacts-prev {
+  box-shadow: 10px 10px 10px black;
+  border-radius: 20px;
+  height: 200px;
+  margin: 60px;
 }
