--- a/css/style.css
+++ b/css/style.css
@@ -156,3 +156,12 @@
   box-shadow: 10px 10px 10px black;
   color: black;
 }
+.dark-light-button {
+  width: 18vw;
+  font-size: 50px; 
+  margin-right: auto;
+  background-color: white;
+  border-right: solid 3px #606c38;
+  border-bottom: solid 3px #606c38;
+  text-align: center;
+}
