--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-#home-body {
+.home-body {
   width:100vw;
   height: 100vh;
   margin: 0px;
@@ -24,15 +24,15 @@
   border-bottom: solid 3px #606c38;
 }
 .icon {
-  height: 130px;
-  width: 130px;
+  height: 13vh;
+  width: 7vw;
   margin: 20px 30px;
-  padding: 15px 50px;
+  padding: 1vh 3vw;
   background-color: #ffffff;
   box-shadow: 15px 15px 15px black;
   border:solid  #606c38;
 }
-#preview-sidebar {
+.preview-sidebar {
   width: 18vw;
   justify-items: center;
   background-color: rgba(210, 210, 210, 0.6);
@@ -164,4 +164,12 @@
   border-right: solid 3px #606c38;
   border-bottom: solid 3px #606c38;
   text-align: center;
+}
+.dark-mode {
+  background: #22223b;
+  color: #f8f9fa;
+  border-color: #4a4e69;
+}
+.dark-mode-body {
+  background: url(../Images/DarkBackground.jpg);
 }
