--- a/css/style.css
+++ b/css/style.css
@@ -41,40 +41,12 @@
   border-bottom: solid 3px #606c38;
 }
 
-#about-body {
-  margin: 0px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  background-color: #ffffff;
-}
-#about-header {
-  font-family: 'Nuosu SIL', serif;
-  width: 100vw;
-  text-align: center;
-  font-size: 50px;
-  margin: 40px 0px 0px;
-}
 #profile-pic {
   height: 240px;
   border-radius: 50%;
   border: solid 5px;
 }
-#about-top {
-  display: grid;
-  justify-items: center;
-  margin: 0px;
-  grid-row: 1 / 2;
-  background: url("/Images/File_010.jpeg");
-  background-size:cover;
-  height: 400px;
-}
-#about-bottom {
-  margin: 20px;
-  height: 450px;
-  background-color: #ffffff;
-  border: solid #606c38
-}
+
 .about-bio {
   text-align: center;
   margin: 20px;
@@ -83,6 +55,9 @@
   background-color: #ffffff;
   border: double 10px #606c38;
   border-radius: 20px;
+}
+#about-header {
+  margin-top: 20px;
 }
 
 #work-body {
@@ -96,13 +71,18 @@
 #work-top {
   background-size: cover;
 }
-#resume-header, #work-header, #contact-header {
+.secondary-header {
   text-align: center;
   font-family: 'Nuosu SIL', serif;
-  margin-top: 150px;
+  margin-top: 100px;
   font-size: 100px;
 }
-#resume-bottom, #work-bottom, #contact-bottom {
+.secondary-top {
+display: flex;
+flex-direction: column;
+align-items: center;
+} 
+.secondary-bottom {
   display: flex;
   justify-content: center;
   position: absolute ; bottom: 0;
@@ -155,6 +135,10 @@
   border: solid 3px #606c38;
   box-shadow: 10px 10px 10px black;
   color: black;
+}
+.nav-buttons {
+  display: flex;
+  flex-direction: row;
 }
 .dark-light-button {
   width: 18vw;
