--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,6 @@
   height: 100vh;
   margin: 0px;
   display: flex;
-  grid-template-columns: 20% auto;
-  grid-template-rows: 20% auto;
   background: url(/Images/HomePage.jpeg);
   background-size: cover;
   flex-direction: column ;
@@ -60,17 +58,6 @@
   margin-top: 20px;
 }
 
-#work-body {
-  width: 100vw;
-  margin: 0;
-  display: flex;
-  background: url(/Images/Work-Screen.jpeg);
-  background-size: cover;
-  flex-direction:column;
-}
-#work-top {
-  background-size: cover;
-}
 .secondary-header {
   text-align: center;
   font-family: 'Nuosu SIL', serif;
@@ -105,27 +92,11 @@ align-items: center;
   height: 200px;
   margin: 10px 20px;
 }
-#contact-body {
-  margin: 0px;
-  display: flex;
-  flex-direction: column;
-  background: url(/Images/ContactPageFinal.jpeg);
-  width: 100vw;
-  background-size: cover;
-  height: 100vh;
-}
 .contacts-prev {
   box-shadow: 10px 10px 10px black;
   border-radius: 20px;
   height: 200px;
   margin: 60px;
-}
-#resume-body {
-  background: url(../Images/ResumeBackground.jpeg);
-  margin: 0px;
-  width: 100vw;
-  height: 100vh;
-  background-size: cover;
 }
 .home-button {
   background-color: #f8f9fa;
@@ -156,4 +127,7 @@ align-items: center;
 }
 .dark-mode-body {
   background: url(../Images/DarkBackground.jpg);
+}
+.dark-mode-header {
+  color: #f8f9fa;
 }
