--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
   background-color: #f8f9fa;
   margin: 0px;
   font-family: 'Lato', sans-serif;
-  padding: 15px;
+  padding: 15px 0px;
   border-bottom: solid 3px #606c38;
 }
 .icon {
@@ -38,8 +38,21 @@
   border-right: solid 3px #606c38;
   border-bottom: solid 3px #606c38;
 }
-
+.profile-area {
+  display: flex;
+  flex-direction: row;
+}
+.hidden-message {
+  font-size: 20px;
+  position: fixed;
+  background-color: #f8f9fa;
+  border-radius: 10px;
+  padding: 4px;
+  border: solid 4px #606c38;
+}
 #profile-pic {
+  position: relative;
+  margin-top: 0px;
   height: 240px;
   border-radius: 50%;
   border: solid 5px;
@@ -47,22 +60,24 @@
 
 .about-bio {
   text-align: center;
-  margin: 20px;
-  padding: 47px;
+  margin: 50px;
+  padding: 30px;
   font-size: 26px;
   background-color: #ffffff;
   border: double 10px #606c38;
   border-radius: 20px;
 }
 #about-header {
-  margin-top: 20px;
+  margin-top: 0px;
 }
 
 .secondary-header {
   text-align: center;
   font-family: 'Nuosu SIL', serif;
-  margin-top: 100px;
+  margin-top: 0px;
+  margin-bottom: 0px;
   font-size: 100px;
+  text-shadow: 5px 5px 5px white;
 }
 .secondary-top {
 display: flex;
@@ -79,7 +94,7 @@ align-items: center;
   background-color: rgba(210, 210, 210, 0.6);
   border-top:solid black;
 }
-.resumes, .works {
+.file-display {
   margin: 20px 10px 80px;
   background-color: #ffffff;
   width: fit-content;
@@ -106,7 +121,7 @@ align-items: center;
   border: solid 3px #606c38;
   box-shadow: 10px 10px 10px black;
   color: black;
-}
+} 
 .nav-buttons {
   display: flex;
   flex-direction: row;
@@ -129,5 +144,14 @@ align-items: center;
   background: url(../Images/DarkBackground.jpg);
 }
 .dark-mode-header {
+  color: #f8f9fa;
+  text-shadow: 5px 5px 5px black;
+}
+.dark-mode-bottom {
+  background-color: rgba(80, 80, 80, 0.6);
+}
+.dark-mode-content {
+  background-color: #22223b;
+  border-color: #4a4e69;
   color: #f8f9fa;
 }
