--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,16 @@ align-items: center;
   background-color: rgba(210, 210, 210, 0.6);
   border-top:solid black;
 }
+#about-bottom {
+  display: flex;
+  justify-content: center;
+  position: absolute ; bottom: 0;
+  width: 100%;
+  height: 45vh;
+  text-align: center;
+  
+  
+}
 .file-display {
   margin: 20px 10px 80px;
   background-color: #ffffff;
