--- a/css/style.css
+++ b/css/style.css
@@ -105,11 +105,20 @@ align-items: center;
   
 }
 .file-display {
-  margin: 20px 10px 80px;
+  display: flex;
+  flex-direction: column;
+  margin: 20px 10px 20px;
+  padding: 10px;
   background-color: #ffffff;
   width: fit-content;
   border: solid black;
   box-shadow: 10px 10px 10px black;
+}
+.work-name {
+  margin: 5px;
+}
+.work-description {
+  margin: 5px;
 }
 .resume-prev, .work-prev {
   background-color: black;
