--- a/css/style.css
+++ b/css/style.css
@@ -101,11 +101,10 @@ align-items: center;
   width: 100%;
   height: 45vh;
   text-align: center;
-  
-  
 }
 .file-display {
   display: flex;
+  text-align: center;
   flex-direction: column;
   margin: 20px 10px 20px;
   padding: 10px;
@@ -115,17 +114,26 @@ align-items: center;
   box-shadow: 10px 10px 10px black;
 }
 .work-name {
-  margin: 5px;
+  margin: 10px 40px;
+  max-width: 240px;
 }
 .work-description {
-  margin: 5px;
+  margin: 10px 40px;
+  max-width: 240px;
 }
 .resume-prev, .work-prev {
   background-color: black;
   padding: 10px;
   height: 200px;
   margin: 10px 20px;
+  justify-self: center;
 }
+
+.work-prev {
+  width: 260px;
+  justify-self: center;
+}
+
 .contacts {
   padding: 20px;
   margin-bottom: 75px;
