--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,7 @@ align-items: center;
 .resume-prev, .work-prev {
   background-color: black;
   padding: 10px;
-  height: 200px;
+  height: fit-content;
   margin: 10px 20px;
   justify-self: center;
 }
